[gd_scene load_steps=7 format=3 uid="uid://4pgm3gpk6cwm"]

[ext_resource type="Script" uid="uid://cx1ka4cvgfbfd" path="res://patoscene/PatoEstatico.gd" id="1_fs2bu"]
[ext_resource type="PackedScene" uid="uid://qh1xv3v0uaa0" path="res://patoscene/Pelotita.tscn" id="2_l3cwi"]
[ext_resource type="Texture2D" uid="uid://u0hrrdbxxjpj" path="res://Assets/Patos/yekoframe1.png" id="2_ye4gn"]
[ext_resource type="Texture2D" uid="uid://cd7mm6ayvjmtt" path="res://Assets/Patos/yekoframe2.png" id="3_qjfje"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bv15t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ye4gn")
}, {
"duration": 1.0,
"texture": ExtResource("3_qjfje")
}],
"loop": false,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ye4gn")
}, {
"duration": 1.0,
"texture": ExtResource("3_qjfje")
}],
"loop": true,
"name": &"fly",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bcve"]
size = Vector2(82, 50)

[node name="PatoEstatico" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_fs2bu")
pelotita_scene = ExtResource("2_l3cwi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bv15t")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(28, -2)
shape = SubResource("RectangleShape2D_6bcve")

[node name="Timer" type="Timer" parent="."]

[node name="DropTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
